Added changes for company Plans